messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: messaging.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service   # must match your ClusterIP Service name
            port:
              number: 8000
